--- a/main.tex
+++ b/main.tex
@@ -1,16 +1,18 @@
 \documentclass[]{article}
 \usepackage{subfiles}
 \usepackage[pdftex]{graphicx} % remove pdftex if you are not compiling to pdf
+%\usepackage{subfig}
 \usepackage{float}
 \graphicspath{{./figures/}}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \usepackage[caption=false]{subfig}
+\usepackage{xcolor}
 \usepackage{booktabs}
 \usepackage[%
     style=phys
     ,backend=biber
     ,natbib=true
-    ,maxbibnames=5
+    ,maxbibnames=6
     ,biblabel=brackets
     %,giveninits=trueb
     %,abbreviate=false
@@ -32,7 +34,7 @@
 \usepackage{lineno}
 \linenumbers
 
-\title{Towards a $\nu_{\mu}$ CC $\pi^{0}$ Measurement at ICARUS}
+\title{Measurement of Muon neutrino Charged-Current Neutral Pion Production at ICARUS}
 \author{Lane Kashur}
 \date{\today}
 
