--- a/sample.bib
+++ b/sample.bib
@@ -12,6 +12,16 @@
   url={https://arxiv.org/abs/2102.01033}
 }
 
+@article{bnbflux,
+  title={Neutrino flux prediction at MiniBooNE},
+  author={A. A. Aguilar-Arevalo et al. (MiniBooNE Collaboration)},
+  journal={Phys. Rev. D 79, 072002},
+  pages={},
+  year={2009},
+  publisher={},
+  url={https://doi.org/10.1103/PhysRevD.79.072002}
+}
+
 % miscellaneous, e.g, a url
 @misc{cebl,
   title={{CEBL}: {C}olorado {EEG} and {B}rain-{C}omputer {I}nterface {L}aboratory},
